# RamenAI

./: .gitignore  Dockerfile  README.md  TEST.md  app.py  auth.py  db.py  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt  views.py
RamenAI/: __init__.py  app.py  auth.py  db.py  main.py  pyproject.toml  schema.py  views.py
RamenAI/static/: app.js  script.js
RamenAI/static/css/: main.css
RamenAI/templates/: base.html  chat.html  login.html
static/: script.js
static/css/: main.css
templates/: base.html  chat.html  login.html
tests/: conftest.py  test_app.py  test_db.py
